fix #253: added OAS 3 generation
